Switch to using github-pages for building locally
This will hopefully prevent differences between local and github builds, and also remove some warnings during builds

--- a/_config.yml
+++ b/_config.yml
@@ -41,11 +41,10 @@ paginate_path: "/media/page:num/"
 
 
 # Build settings
-# markdown: kramdown
-+ markdown: CommonMark
-+ commonmark:
-+   options: ["SMART", "FOOTNOTES"]
-+   extensions: ["strikethrough", "autolink", "table"]
+markdown: CommonMark
+commonmark:
+  options: ["SMART", "FOOTNOTES"]
+  extensions: ["strikethrough", "autolink", "table"]
 permalink: pretty
 
 collections:
