--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Codesync
 description: > # this means to ignore newlines until "baseurl:"
   Codesync conferences website
-baseurl: "/jekyll-codesync-global"
+baseurl: "/jekyll-codesync-global-monika"
 url: "https://esl.github.io" # the base hostname & protocol for your site
 # Build settings
 
